src/Chirp.Web/wwwroot/css/style.css
h2, .name-timeline {
  padding-bottom: 5px;
  border-bottom: 2px solid #4b1515;
  display: flex;
  align-items: center;
  justify-content:space-between;
  margin-bottom: 0px;
}

.tag {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 5px;
  align-items: center;
  cursor: pointer;
}

.tag #icon {
  width: 20px;
  height: 20px;
}

#Log{
  width: 20px;
  height: 20px;
  padding-right: 5px;
}

#filter{
  height: 20px;
  cursor:pointer;
}

.dropMenu{
  display: flex;
  position: relative;
}

.dropMenu button{
  display: flex;
  background-color: transparent;
  height: 20px;
  width: 40px;
}

.dropMenu:hover .content{
  display: flex;
}

.content{
  position: absolute;
  justify-content: center;
  align-items: center;
  background-color: rgb(214, 213, 213);
  width: 100px;
  flex-direction: column;
  flex-wrap: wrap;
  padding: 5px;
  z-index: 10;
  right: 0px;
  top: 28px;
  border-width: 1.5px;
  border-style:solid;
  border-color:rgb(60, 59, 59);
  box-shadow: -3px 3px 8px rgba(0, 0, 0, 0.693);
  display: none;
}

.content button{
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 15px;
  margin-bottom: 10px;
  height: 25px;
  width: 80%;
  border-style: solid;
  border-width: 1px;
  background-color: rgba(117, 117, 117, 0.549);
  z-index: 10;
}

.content button:hover{
  background-color: rgba(77, 77, 77, 0.549);
}

.content span{
  display: flex;
  justify-content: center;
  font-size: 13px;
  border-bottom: 2px;
  border-bottom-style:dashed;
  margin-bottom: 10px;
  width: 100%;
  padding-bottom: 5px;
}

#navbutton{
  padding: 0;
  display: flex;
  flex-direction:row;
  justify-content: flex-start;
  align-items:center;
  background-color:transparent;
  font-size: 15px;
}

#defaultMessage{
  padding-bottom: 15px;
}

.cheep-container {
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin-top: 200px;

}

@media only screen and ( min-width: 850px ) {
  .cheep-container {
    width: 850px;
    flex-direction: column;
  }
}

.cheep-item {
  position:relative;
  display: flex;
  flex-direction: column;
  background-color: rgba(160, 160, 160, 0.335);
  padding: 15px;
  padding-bottom: 5px;
  padding-top: 12px;
  border-radius: 5px;
  z-index: auto;
  font-size: 14px;
}

.cheep-item::before{
  content: "";
  position: absolute;
  width: 30px;
  height: 30px;
  border-top: 1.5px solid rgb(0, 0, 0);
  border-left: 1.5px solid rgb(0, 0, 0);
  top:0px;
  left: 0px;
  border-radius: 5px;
  border-start-end-radius: 0px;
  border-end-start-radius: 0px;
}

.cheep-item::after{
  content: "";
  position: absolute;
  width: 30px;
  height: 30px;
  border-right: 1.5px solid rgb(0, 0, 0);
  border-bottom: 1.5px solid rgba(0, 0, 0, 0.67);
  bottom:0px;
  right: 0px;
  border-radius: 5px;
  border-end-start-radius: 0px;
  border-start-end-radius: 0px;
}

.cheep-author {
  text-decoration: underline;
  cursor: pointer;
}

.cheep-body{
  padding: 0px;
  margin: 0px;
  padding-top: 5px;
  padding-bottom: 2px;
}

.cheep-date{
  display: flex;
  justify-content: end;
  font-size: 13px;
  border-bottom-style: solid;
  border-color: rgba(128, 128, 128, 0.644);
}

.likes{
  display: flex;
  padding-top: 3px;
  padding-left: 20px;
  gap: 50px;
  height: 15px;
  width: 88px;
  align-items: center;
  font-family:'Courier New', Courier, monospace;
}

.LikeButtons{
  margin-top: 10px;
  display: flex;
  gap: 10px;
}

.LikeButtons button{
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50px;
  height: 20px;
  background: rgba(190, 190, 198, 0.536);
  border-color: black;
  border-style: solid;
  border-width: 1px;
  border-radius: 5px;
}

.LikeButtons .current{
  background: rgba(70, 158, 230, 0.848);
}

nav {
  position: fixed;
  top: 90px;
  display: flex;
  flex-direction: row;
  margin-top: 10px;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  left: 0;
  background-color: gray;
  border-bottom: 2px solid #4b1515;
  border-top: 2px solid #4b1515;
  z-index: 5;

}



.navigation {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 5px;
  margin-right: 20px;
}

.nav-tags {
  display: flex;
  flex-direction: row;
  gap: 20px;
  margin-left: 20px;
  height: 50px;
  align-items: center;
}

.nav-arrow {
  border-radius: 100px;
  flex-direction: row;
  align-items: center;
}

#left, #right {
  height: 10px;
  width: 10px;
}

#left {
  transform: rotate(180deg);
}

.list-item:hover {
  cursor: pointer;
}


.pagelist{
  display: flex;
  border: 1.5px solid rgba(175, 175, 175, 0.748);
  padding: 7px;
  font-size: 10px;
  justify-content: space-between;
  align-items: center; 
  border-radius: 10px;
  width: 200px;
  background: white;
  list-style-type: none;
}

.pagelist li {
  display: flex;
  justify-content: center;
  width: 20px;
  height: 15px;
  border-radius: 2px;
  border-style: solid;
  border-color: rgba(119, 106, 106, 0.762);
  border-width: 1px;
  align-items: center;
}

.pagelist li:hover{
  background: rgba(64, 144, 205, 0.583);
}
.cheep-content {
display:flex;
justify-content: center;
}

.cheep-image {
  text-align: center;
  width: 95%;
  background-color: #bcbcbc;
  padding: 10px;
  border: #ffffff;
  border-style:dotted;
}

.cheep-image img {
  max-width: 90%;
  object-fit: contain;
  max-height: 500px; 
  display: block;
  margin: 0 auto;
}

